<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vive_tracker_ros2</name>
  <version>1.0.0</version>
  <description>adaption of https://github.com/moon-wreckers/vive_tracker to ROS2</description>
  <maintainer email="flypulator@tu-dresden.de">flypulator</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <exec_depend>warnings</exec_depend>
  <exec_depend>pyyaml</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>scipy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
