<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vive_tracker_ros2</name>
  <version>1.0.0</version>
  <description>adaption of https://github.com/moon-wreckers/vive_tracker to ROS2</description>
  <maintainer email="flypulator@tu-dresden.de">flypulator</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>warnings</depend>
  <depend>pyyaml</depend>
  <depend>numpy</depend>
  <depend>scipy</depend>
  <depend>openvr</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
